general properties added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=task-management
+
+logging.level.org.springframework.security=DEBUG
+
+server.tomcat.threads.stack-size=1024
+
+## JWT settings
+app.jwt-secret = JWTSecretKey
+app.jwt-expiration-milliseconds = 604800000
+jwt.remember-me.expiration=25920000
+jwt.route.authentication.path=auth
+jwt.route.authentication.refresh=refresh
+
+#profiles
+spring.profiles.active=dev
